--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 </html>
 
 <main id="main">
-    <header>
+        <div class="topnav">
+            <a href="#img-div">Main</a>
+            <a href="#tribute-info">Content</a>
+        </div>
         <div id="title">Marcus Bontempelli</div>
         <div id="sub-title">The Great Bulldog of them All</div>
     </header>
